overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 body {
     font-family: var(--font-article);
     text-align: center;
+    overflow-x: hidden;
 }
 
 /*-----------------  Navbar  --------------------*/
